EasyParser.java
// Generated from Easy.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class EasyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INICIO=1, FIN=2, SI=3, SINO=4, MIENTRAS=5, PARA=6, RETORNAR=7, LEER=8, 
		IMPRIMIR=9, SELECCIONAR=10, CASO=11, DEFECTO=12, ROMPER=13, CLASE=14, 
		SUPER=15, METODO=16, FUNCION=17, ENTERO=18, FLOTANTE=19, BOOLEANO=20, 
		CADENA=21, VERDADERO=22, FALSO=23, ID=24, LITENTERO=25, LITFLOTANTE=26, 
		LITERALCADENA=27, IGUALIGUAL=28, MAYORIGUAL=29, MENORIGUAL=30, DIFERENTEDE=31, 
		IGUAL=32, IGUAL_CASO=33, Y=34, O=35, MAYORQUE=36, MENORQUE=37, SUMA=38, 
		RESTA=39, MULTIPLICACION=40, DIVISION=41, LLAVEIZQ=42, LLAVEDER=43, PARIZQ=44, 
		PARDER=45, CORCHETEIZQ=46, CORCHETEDER=47, PUNTOYCOMA=48, COMA=49, PUNTO=50, 
		COMENTARIO=51, ESPACIOS=52, ERROR=53;
	public static final int
		RULE_bloque_elemento = 0, RULE_programa = 1, RULE_declaracion = 2, RULE_lista_declaraciones = 3, 
		RULE_funcion_definicion = 4, RULE_clase_definicion = 5, RULE_clase_cuerpo = 6, 
		RULE_atributo = 7, RULE_metodo = 8, RULE_parametros = 9, RULE_parametro = 10, 
		RULE_tipo_dato = 11, RULE_sentencia = 12, RULE_declaracion_variable_sentencia = 13, 
		RULE_declaracion_variable = 14, RULE_declaracion_variable_simple = 15, 
		RULE_lista_valores = 16, RULE_asignacion = 17, RULE_asignacion_simple = 18, 
		RULE_estructura_condicional = 19, RULE_estructura_seleccion = 20, RULE_caso = 21, 
		RULE_caso_defecto = 22, RULE_estructura_repetitiva = 23, RULE_estructura_para = 24, 
		RULE_bloque = 25, RULE_sentencia_imprimir = 26, RULE_sentencia_lectura = 27, 
		RULE_sentencia_retorno = 28, RULE_llamada_metodo = 29, RULE_llamada_metodo_sentencia = 30, 
		RULE_argumentos = 31, RULE_expresion_primaria = 32, RULE_expresion = 33, 
		RULE_expresion_lista = 34, RULE_expresion_logica = 35, RULE_expresion_relacional = 36, 
		RULE_operador_relacional = 37, RULE_expresion_aritmetica = 38, RULE_termino = 39, 
		RULE_factor = 40, RULE_llamada_funcion = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"bloque_elemento", "programa", "declaracion", "lista_declaraciones", 
			"funcion_definicion", "clase_definicion", "clase_cuerpo", "atributo", 
			"metodo", "parametros", "parametro", "tipo_dato", "sentencia", "declaracion_variable_sentencia", 
			"declaracion_variable", "declaracion_variable_simple", "lista_valores", 
			"asignacion", "asignacion_simple", "estructura_condicional", "estructura_seleccion", 
			"caso", "caso_defecto", "estructura_repetitiva", "estructura_para", "bloque", 
			"sentencia_imprimir", "sentencia_lectura", "sentencia_retorno", "llamada_metodo", 
			"llamada_metodo_sentencia", "argumentos", "expresion_primaria", "expresion", 
			"expresion_lista", "expresion_logica", "expresion_relacional", "operador_relacional", 
			"expresion_aritmetica", "termino", "factor", "llamada_funcion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio'", "'fin'", "'si'", "'sino'", "'mientras'", "'para'", 
			"'retornar'", "'leer'", "'imprimir'", "'seleccionar'", "'caso'", "'defecto'", 
			"'romper'", "'clase'", "'super'", "'metodo'", "'funcion'", "'entero'", 
			"'flotante'", "'booleano'", "'cadena'", "'verdadero'", "'falso'", null, 
			null, null, null, "'::'", "'>:'", "'<:'", "':!'", "':'", "'='", "'&'", 
			"'??'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'{'", "'}'", "'('", 
			"')'", "'['", "']'", "';'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INICIO", "FIN", "SI", "SINO", "MIENTRAS", "PARA", "RETORNAR", 
			"LEER", "IMPRIMIR", "SELECCIONAR", "CASO", "DEFECTO", "ROMPER", "CLASE", 
			"SUPER", "METODO", "FUNCION", "ENTERO", "FLOTANTE", "BOOLEANO", "CADENA", 
			"VERDADERO", "FALSO", "ID", "LITENTERO", "LITFLOTANTE", "LITERALCADENA", 
			"IGUALIGUAL", "MAYORIGUAL", "MENORIGUAL", "DIFERENTEDE", "IGUAL", "IGUAL_CASO", 
			"Y", "O", "MAYORQUE", "MENORQUE", "SUMA", "RESTA", "MULTIPLICACION", 
			"DIVISION", "LLAVEIZQ", "LLAVEDER", "PARIZQ", "PARDER", "CORCHETEIZQ", 
			"CORCHETEDER", "PUNTOYCOMA", "COMA", "PUNTO", "COMENTARIO", "ESPACIOS", 
			"ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Easy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EasyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_elementoContext extends ParserRuleContext {
		public SentenciaContext sentencia() {
			return getRuleContext(SentenciaContext.class,0);
		}
		public Funcion_definicionContext funcion_definicion() {
			return getRuleContext(Funcion_definicionContext.class,0);
		}
		public Bloque_elementoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_elemento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterBloque_elemento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitBloque_elemento(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitBloque_elemento(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_elementoContext bloque_elemento() throws RecognitionException {
		Bloque_elementoContext _localctx = new Bloque_elementoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bloque_elemento);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SI:
			case MIENTRAS:
			case PARA:
			case RETORNAR:
			case LEER:
			case IMPRIMIR:
			case SELECCIONAR:
			case SUPER:
			case ENTERO:
			case FLOTANTE:
			case BOOLEANO:
			case CADENA:
			case ID:
			case LLAVEIZQ:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				sentencia();
				}
				break;
			case FUNCION:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				funcion_definicion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(EasyParser.INICIO, 0); }
		public TerminalNode LLAVEIZQ() { return getToken(EasyParser.LLAVEIZQ, 0); }
		public TerminalNode LLAVEDER() { return getToken(EasyParser.LLAVEDER, 0); }
		public TerminalNode FIN() { return getToken(EasyParser.FIN, 0); }
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<Funcion_definicionContext> funcion_definicion() {
			return getRuleContexts(Funcion_definicionContext.class);
		}
		public Funcion_definicionContext funcion_definicion(int i) {
			return getRuleContext(Funcion_definicionContext.class,i);
		}
		public List<Clase_definicionContext> clase_definicion() {
			return getRuleContexts(Clase_definicionContext.class);
		}
		public Clase_definicionContext clase_definicion(int i) {
			return getRuleContext(Clase_definicionContext.class,i);
		}
		public List<Declaracion_variable_sentenciaContext> declaracion_variable_sentencia() {
			return getRuleContexts(Declaracion_variable_sentenciaContext.class);
		}
		public Declaracion_variable_sentenciaContext declaracion_variable_sentencia(int i) {
			return getRuleContext(Declaracion_variable_sentenciaContext.class,i);
		}
		public List<Bloque_elementoContext> bloque_elemento() {
			return getRuleContexts(Bloque_elementoContext.class);
		}
		public Bloque_elementoContext bloque_elemento(int i) {
			return getRuleContext(Bloque_elementoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20856832L) != 0)) {
				{
				setState(92);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(88);
					declaracion();
					}
					break;
				case 2:
					{
					setState(89);
					funcion_definicion();
					}
					break;
				case 3:
					{
					setState(90);
					clase_definicion();
					}
					break;
				case 4:
					{
					setState(91);
					declaracion_variable_sentencia();
					}
					break;
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(INICIO);
			setState(98);
			match(LLAVEIZQ);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4398067386344L) != 0)) {
				{
				{
				setState(99);
				bloque_elemento();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(LLAVEDER);
			setState(106);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public Lista_declaracionesContext lista_declaraciones() {
			return getRuleContext(Lista_declaracionesContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(EasyParser.PUNTOYCOMA, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			tipo_dato();
			setState(109);
			lista_declaraciones();
			setState(110);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_declaracionesContext extends ParserRuleContext {
		public List<Declaracion_variableContext> declaracion_variable() {
			return getRuleContexts(Declaracion_variableContext.class);
		}
		public Declaracion_variableContext declaracion_variable(int i) {
			return getRuleContext(Declaracion_variableContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(EasyParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(EasyParser.COMA, i);
		}
		public Lista_declaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_declaraciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterLista_declaraciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitLista_declaraciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitLista_declaraciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_declaracionesContext lista_declaraciones() throws RecognitionException {
		Lista_declaracionesContext _localctx = new Lista_declaracionesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lista_declaraciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			declaracion_variable();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(113);
				match(COMA);
				setState(114);
				declaracion_variable();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Funcion_definicionContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(EasyParser.FUNCION, 0); }
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(EasyParser.ID, 0); }
		public TerminalNode PARIZQ() { return getToken(EasyParser.PARIZQ, 0); }
		public TerminalNode PARDER() { return getToken(EasyParser.PARDER, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public Funcion_definicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion_definicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterFuncion_definicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitFuncion_definicion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitFuncion_definicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Funcion_definicionContext funcion_definicion() throws RecognitionException {
		Funcion_definicionContext _localctx = new Funcion_definicionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcion_definicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(FUNCION);
			setState(121);
			tipo_dato();
			setState(122);
			match(ID);
			setState(123);
			match(PARIZQ);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20709376L) != 0)) {
				{
				setState(124);
				parametros();
				}
			}

			setState(127);
			match(PARDER);
			setState(128);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Clase_definicionContext extends ParserRuleContext {
		public TerminalNode CLASE() { return getToken(EasyParser.CLASE, 0); }
		public List<TerminalNode> ID() { return getTokens(EasyParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(EasyParser.ID, i);
		}
		public TerminalNode LLAVEIZQ() { return getToken(EasyParser.LLAVEIZQ, 0); }
		public TerminalNode LLAVEDER() { return getToken(EasyParser.LLAVEDER, 0); }
		public TerminalNode IGUAL() { return getToken(EasyParser.IGUAL, 0); }
		public List<Clase_cuerpoContext> clase_cuerpo() {
			return getRuleContexts(Clase_cuerpoContext.class);
		}
		public Clase_cuerpoContext clase_cuerpo(int i) {
			return getRuleContext(Clase_cuerpoContext.class,i);
		}
		public Clase_definicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase_definicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterClase_definicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitClase_definicion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitClase_definicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clase_definicionContext clase_definicion() throws RecognitionException {
		Clase_definicionContext _localctx = new Clase_definicionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clase_definicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(CLASE);
			setState(131);
			match(ID);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(132);
				match(IGUAL);
				setState(133);
				match(ID);
				}
			}

			setState(136);
			match(LLAVEIZQ);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 20774912L) != 0)) {
				{
				{
				setState(137);
				clase_cuerpo();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(LLAVEDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Clase_cuerpoContext extends ParserRuleContext {
		public AtributoContext atributo() {
			return getRuleContext(AtributoContext.class,0);
		}
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public Clase_cuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase_cuerpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterClase_cuerpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitClase_cuerpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitClase_cuerpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clase_cuerpoContext clase_cuerpo() throws RecognitionException {
		Clase_cuerpoContext _localctx = new Clase_cuerpoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_clase_cuerpo);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTERO:
			case FLOTANTE:
			case BOOLEANO:
			case CADENA:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				atributo();
				}
				break;
			case METODO:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				metodo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtributoContext extends ParserRuleContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(EasyParser.ID, 0); }
		public TerminalNode PUNTOYCOMA() { return getToken(EasyParser.PUNTOYCOMA, 0); }
		public TerminalNode CORCHETEIZQ() { return getToken(EasyParser.CORCHETEIZQ, 0); }
		public TerminalNode LITENTERO() { return getToken(EasyParser.LITENTERO, 0); }
		public TerminalNode CORCHETEDER() { return getToken(EasyParser.CORCHETEDER, 0); }
		public AtributoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).enterAtributo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EasyListener ) ((EasyListener)listener).exitAtributo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EasyVisitor ) return ((EasyVisitor<? extends T>)visitor).visitAtributo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtributoContext atributo() throws RecognitionException {
		AtributoContext _localctx = new AtributoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atributo);
		try {
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				tipo_dato();
				setState(150);
				match(ID);
				setState(151);
				match(PUNTOYCOMA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				tipo_dato();
				setState(154);
				match(ID);
				setState(155);
				match(CORCHETEIZQ);
				setState(156);
				match(LITENTERO);
				setState(157);
				match(CORCHETEDER);
				setState(158);
				match(PUNTOYCOMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
